--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <nav id="Hamburger" class="rightbar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="/index.html" class="II">Home</a>
+  <a href="MyPortfolio/index.html" class="II">Home</a>
 </nav>
 
 <div class="burger">
@@ -31,10 +31,10 @@
 
 <!-- Little design import -->
 <div class="corners">
-  <img src="/ressources/corner1.png" id="corner1" alt="corner1">
-  <img src="/ressources/corner2.png" id="corner2" alt="corner2">
-  <img src="/ressources/corner3.png" id="corner3" alt="corner3">
-  <img src="/ressources/corner4.png" id="corner4" alt="corner4">
+  <img src="MyPortfolio/ressources/corner1.png" id="corner1" alt="corner1">
+  <img src="MyPortfolio/ressources/corner2.png" id="corner2" alt="corner2">
+  <img src="MyPortfolio/ressources/corner3.png" id="corner3" alt="corner3">
+  <img src="MyPortfolio/ressources/corner4.png" id="corner4" alt="corner4">
 </div>
         
 <!-- Page Info -->
@@ -56,10 +56,10 @@
 
 <div id="projects" class="projects">
   
-  <img src="/ressources/corner1.png" id="corner5" alt="corner5">
-  <img src="/ressources/corner3.png" id="corner6" alt="corner6">
+  <img src="MyPortfolio/ressources/corner1.png" id="corner5" alt="corner5">
+  <img src="MyPortfolio/ressources/corner3.png" id="corner6" alt="corner6">
 
-    <a href="/index.html"><h2>Grade Calculator Website</h2></a>
+    <a href="MyPortfolio/MyProjects/MSc-Coursework/login.php"><h2>Grade Calculator Website</h2></a>
     <br>
     <p>
       This project is a coursework i had to do for my MSc in Computer Science at Oxford Brookes University. 
