--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 
 <footer>
   <ul>
-    <a href="mailto:simosaidi1@gmail.com" target="_blank"><img src="https://skyfall627.github.io/ressources/gmail.png" id="gmail" alt="gmail"></a>
-    <a href="https://github.com/SkyTrojan" target="_blank"><img src="https://skyfall627.github.io/ressources/github.png" id="github" alt="GitHub"></a>
-    <a href="https://www.linkedin.com/in/ss627/" target="_blank"><img src="https://skyfall627.github.io/ressources/linkedin.png" id="linkedin" alt="LinkedIn"></a>
+    <a href="mailto:simosaidi1@gmail.com" target="_blank"><img src="https://skyfall627.github.io/MyPortfolio/ressources/gmail.png" id="gmail" alt="gmail"></a>
+    <a href="https://github.com/SkyTrojan" target="_blank"><img src="https://skyfall627.github.io/MyPortfolio/ressources/github.png" id="github" alt="GitHub"></a>
+    <a href="https://www.linkedin.com/in/ss627/" target="_blank"><img src="https://skyfall627.github.io/MyPortfolio/ressources/linkedin.png" id="linkedin" alt="LinkedIn"></a>
   </ul>
 </footer>
 
