--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 <nav id="Hamburger" class="rightbar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="https://skyfall627.github.io/MyPortfolio/index.html" class="II">Home</a>
+  <a href="https://skyfall627.github.io/MyPortfolio/index.html" class="II">CV</a>
+  <a href="https://skyfall627.github.io/MyPortfolio/index.html" class="II">Home</a>
 </nav>
 
 <div class="burger">
@@ -41,7 +43,6 @@
 <div id="introduction">
     <header>
           <h1>Welcome.</h1>
-          
           <p id="Intro">
             I'm Simo, an aspiring Full Stack Developer and fresh graduate.
           I'm currently working on my personal portfolio website &lsaquo;This one&rsaquo;. 
@@ -50,21 +51,17 @@
           My academic background and adaptable learning style have prepared me to tackle new challenges and to be a quick learner in any technical environment.
           Down below are some projects i have completed and some that are still on-going.
           </p>
-          
+          <img src="/ressources/down.png" id="down" alt="down">
      </header>  
 </div>
 
 <div id="projects" class="projects">
   
-  <img src="https://skyfall627.github.io/MyPortfolio/ressources/corner1.png" id="corner5" alt="corner5">
-  <img src="https://skyfall627.github.io/MyPortfolio/ressources/corner3.png" id="corner6" alt="corner6">
-
-    <a href="https://skyfall627.github.io/MyPortfolio/MyProjects/MSc-Coursework/login.php"><h2>Grade Calculator Website</h2></a>
-    <br>
-    <p>
-      This project is a coursework i had to do for my MSc in Computer Science at Oxford Brookes University. 
-      I only own the code and the project is not appropriating the Univeristy's name, images or data.
-    </p>
+  <div class="project1">
+  <a href="https://skyfall627.github.io/MyPortfolio/MyProjects/MSc-Coursework/login.php" target="_blank"><h2>Grade Calculator Website</h2></a>
+  <br>
+    <p>This project is a coursework i had to do for my MSc in Computer Science at Oxford Brookes University.</p>
+      <p>I only own the code and the project is not appropriating the Univeristy's name, images or data.</p>
     <br>
     <h3>Technologies</h3>
     <br>
@@ -73,17 +70,34 @@
       <li>CSS</li>
       <li>JavaScript</li>
       <li>PHP</li>
-      <li>SQL</li>
-      <li>MySQL</li>
+      <li>SQL & MySQL</li>
     </ul>
+  </div>
+
+  <div class="project2">
+  <a href="https://drive.google.com/file/d/1NhIfCXeaUCDRB-XYFKjPFDLnXvBEeKV2/view?usp=sharing" target="_blank"><h2>The Obstrepouros Game</h2></a>
+  <br>
+    <p>Can this situation where a human gets angry at an obstreperous computer/software, be comparable to human-to-human scenario?</p>
+    <p>We used Unity to create a Rythm Game in order to bring out the frustration while playing it</p>
+    <br>
+    <h3>Technologies</h3>
+    <br>
+    <ul>
+      <li>Unity</li>
+      <li>C#</li>
+      <li>Photoshop</li>
+      <li>Illustrator</li>
+    </ul>
+  </div>
+
 </div>
 
 
 <footer>
   <ul>
-    <a href="mailto:simosaidi1@gmail.com" target="_blank"><img src="https://skyfall627.github.io/ressources/gmail.png" id="gmail" alt="gmail"></a>
-    <a href="https://github.com/SkyTrojan" target="_blank"><img src="https://skyfall627.github.io/ressources/github.png" id="github" alt="GitHub"></a>
-    <a href="https://www.linkedin.com/in/ss627/" target="_blank"><img src="https://skyfall627.github.io/ressources/linkedin.png" id="linkedin" alt="LinkedIn"></a>
+    <a href="mailto:simosaidi1@gmail.com" target="_blank"><img src="https://skyfall627.github.io/MyPortfolio/ressources/gmail.png" id="gmail" alt="gmail"></a>
+    <a href="https://github.com/SkyTrojan" target="_blank"><img src="https://skyfall627.github.io/MyPortfolio/ressources/github.png" id="github" alt="GitHub"></a>
+    <a href="https://www.linkedin.com/in/ss627/" target="_blank"><img src="https://skyfall627.github.io/MyPortfolio/ressources/linkedin.png" id="linkedin" alt="LinkedIn"></a>
   </ul>
 </footer>
 
