--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           My academic background and adaptable learning style have prepared me to tackle new challenges and to be a quick learner in any technical environment.
           Down below are some projects i have completed and some that are still on-going.
           </p>
-          <img src="/ressources/down.png" id="down" alt="down">
+          <img src="https://skyfall627.github.io/MyPortfolio/ressources/down.png" id="down" alt="down">
      </header>  
 </div>
 
