--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     </div>  
 
     <button type="button" id="up" onclick="scrollToId('top')">
-      <img src="/ressources/down.png" id="arrow" alt="up">
+      <img src="https://skyfall627.github.io/MyPortfolio/ressources/down.png" id="arrow" alt="up">
     </button>
 </div>
 
