--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <img src="https://skyfall627.github.io/MyPortfolio/ressources/corner4.png" id="corner4" alt="corner4">
 </div>
         
-<!-- Page Info -->
+<!-- Page Info Intro -->
 <div id="introduction">
     <header>
           <h1>Welcome.</h1>
@@ -62,8 +62,8 @@
           <img src="https://skyfall627.github.io/MyPortfolio/ressources/SQL.png" id="img6" class="logos" alt="SQL">
           <img src="https://skyfall627.github.io/MyPortfolio/ressources/MySQL.png" id="img7" class="logos" alt="MySQL">
           <img src="https://skyfall627.github.io/MyPortfolio/ressources/unity.png" id="img8" class="logos" alt="Unity">
-          <img src="https://skyfall627.github.io/MyPortfolio/ressources/jquery.png" id="img9" class="logos" alt="jQuery">
-          <img src="https://skyfall627.github.io/MyPortfolio/ressources/nodejs.png" id="img10" class="logos" alt="Node.JS">
+          <img src="https://skyfall627.github.io/MyPortfolio/ressources/jQuery.png" id="img9" class="logos" alt="jQuery">
+          <img src="https://skyfall627.github.io/MyPortfolio/ressources/nodeJS.png" id="img10" class="logos" alt="Node.JS">
           <img src="https://skyfall627.github.io/MyPortfolio/ressources/C.png" id="img11" class="logos" alt="C#">
           <img src="https://skyfall627.github.io/MyPortfolio/ressources/react.png" id="img12" class="logos" alt="react.JS">
      <button type="button" id="down" onclick="scrollToId('projects')">
@@ -71,6 +71,9 @@
     </button> 
       </header>  
 </div>
+
+<!-- Project ShowCase -->
+
 
 <div id="projects" class="projects">
   <h1>Projects</h1>
@@ -82,7 +85,7 @@
     <br>
     <h3>Technologies</h3>
     <br>
-    <ul>
+    <ul style="list-style-type:none;">
       <li>HTML5</li>
       <li>CSS</li>
       <li>JavaScript</li>
@@ -99,14 +102,14 @@
     <br>
     <h3>Technologies</h3>
     <br>
-    <ul>
+    <ul style="list-style-type:none;">
       <li>Unity</li>
       <li>C#</li>
       <li>Photoshop</li>
       <li>Illustrator</li>
     </ul>
   </div>
-
+  <img src="https://skyfall627.github.io/MyPortfolio/ressources/stick.png" id="stick" alt="stick">
   <div class="project3">
     <a href="" target="_blank"><h2>Template</h2></a>
     <br>
@@ -115,7 +118,7 @@
       <br>
       <h3>Technologies</h3>
       <br>
-      <ul>
+      <ul style="list-style-type:none;">
         <li>template </li>
         <li>template </li>
         <li>template </li>
@@ -131,7 +134,7 @@
       <br>
       <h3>Technologies</h3>
       <br>
-      <ul>
+      <ul style="list-style-type:none;">
         <li>template </li>
         <li>template </li>
         <li>template </li>
