Update on positionning

--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
 
 <div id="projects" class="projects">
   <h1>Projects</h1>
+  <img src="https://skyfall627.github.io/MyPortfolio/ressources/stick.png" id="stick1" alt="stick">
   <div class="project1">
   <a href="https://skyfall627.github.io/MyPortfolio/MyProjects/MSc-Coursework/login.php" target="_blank"><h2>Grade Calculator Website</h2></a>
   <br>
     <p>This project is a coursework i had to do for my MSc in Computer Science at Oxford Brookes University.</p>
-      <p>I only own the code and the project is only demonstrating what the website would look like if the Oxford Brookes Univeristy owned it.</p>
+      <p>I only own the code and the project is only demonstrating what the website would look like if Oxford Brookes Univeristy owned it.</p>
     <br>
     <h3>Technologies</h3>
     <br>
@@ -109,7 +110,9 @@
       <li>Illustrator</li>
     </ul>
   </div>
-  <img src="https://skyfall627.github.io/MyPortfolio/ressources/stick.png" id="stick" alt="stick">
+
+  <img src="https://skyfall627.github.io/MyPortfolio/ressources/stick.png" id="stick2" alt="stick">
+  
   <div class="project3">
     <a href="" target="_blank"><h2>Template</h2></a>
     <br>
