--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </div>
 
   <div class="project2">
-  <a href="https://drive.google.com/file/d/1NhIfCXeaUCDRB-XYFKjPFDLnXvBEeKV2/view?usp=sharing" target="_blank"><h2>The Obstrepouros Game</h2></a>
+  <a href="https://github.com/Skyfall627/The-Obstreperous-Game" target="_blank"><h2>The Obstrepouros Game</h2></a>
   <br>
     <p>Can this situation where a human gets angry at an obstreperous computer/software, be comparable to human-to-human scenario?</p>
     <p>We used Unity to create a Rythm Game in order to bring out the frustration while playing it</p>
