--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     <script src="script.js"></script>
 
     <title>My Portfolio</title>
+</head>
+    
+<body>
 
-    <!-- Navigation Bar -->
+<!-- Navigation Bar -->
 
     <nav id="Hamburger" class="rightbar">
      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -31,11 +34,7 @@
     </div>
 
     <div id="top"></div>
-
-</head>
     
-<body>
-
 <!-- Little design import -->
 <div class="corners">
   <img src="https://skyfall627.github.io/MyPortfolio/ressources/corner1.png" id="corner1" alt="corner1">
@@ -83,12 +82,11 @@
 
 <div id="projects" class="projects">
   <h1>Projects</h1>
-  <img src="https://skyfall627.github.io/MyPortfolio/ressources/stick.png" id="stick1" alt="stick">
   <div class="project1">
   <a href="https://github.com/Skyfall627/MyProjects/tree/main/MSc-Coursework" target="_blank"><h2>Grade Calculator Website</h2></a>
-  <br>
+    <br>
     <p>This project is a coursework i had to do for my MSc in Computer Science at Oxford Brookes University.</p>
-      <p>I only own the code and the project is only demonstrating what the website would look like if Oxford Brookes Univeristy owned it.</p>
+    <p>Only own the code and the project. Demonstrating what the website would look like if the Univeristy owned it.</p>
     <br>
     <h3>Technologies</h3>
     <br>
@@ -102,8 +100,8 @@
   </div>
 
   <div class="project2">
-  <a href="https://drive.google.com/file/d/1NhIfCXeaUCDRB-XYFKjPFDLnXvBEeKV2/view?usp=sharing" target="_blank"><h2>The Obstrepouros Game</h2></a>
-  <br>
+  <a href="https://github.com/Skyfall627/The-Obstreperous-Game" target="_blank"><h2>The Obstrepouros Game</h2></a>
+    <br>
     <p>Can this situation where a human gets angry at an obstreperous computer/software, be comparable to human-to-human scenario?</p>
     <p>We used Unity to create a Rythm Game in order to bring out the frustration while playing it</p>
     <br>
@@ -113,43 +111,41 @@
       <li>Unity</li>
       <li>C#</li>
       <li>Photoshop</li>
-      <li>Illustrator</li>
+      <li>GitHub</li>
     </ul>
   </div>
 
-  <img src="https://skyfall627.github.io/MyPortfolio/ressources/stick.png" id="stick2" alt="stick">
-  
   <div class="project3">
-    <a href="" target="_blank"><h2>Template</h2></a>
+  <a href="https://github.com/Skyfall627/Netball_application" target="_blank"><h2>Netball101</h2></a>
     <br>
-      <p>template template template template template template template template template template </p>
-      <p>template template template template template template template template template template </p>
-      <br>
-      <h3>Technologies</h3>
-      <br>
-      <ul style="list-style-type:none;">
-        <li>template </li>
-        <li>template </li>
-        <li>template </li>
-        <li>template </li>
-      </ul>
-    </div>
+    <p>Software Development project for Netball England with a team in an Agile environment </p>
+     <p>An App for Coaches and Players with a clear goal of self education and guidance with a few extra features</p>
+     <br>
+     <h3>Technologies</h3>
+     <br>
+     <ul style="list-style-type:none;">
+       <li>Android Studio</li>
+       <li>Java</li>
+       <li>Git/GitHub</li>
+       <li>Agile</li>
+     </ul>
+  </div>
 
   <div class="project4">
-    <a href="" target="_blank"><h2>Template</h2></a>
+   <a href="" target="_blank"><h2>Template</h2></a>
     <br>
-      <p>template template template template template template template template template template </p>
-      <p>template template template template template template template template template template </p>
-      <br>
-      <h3>Technologies</h3>
-      <br>
-      <ul style="list-style-type:none;">
-        <li>template </li>
-        <li>template </li>
-        <li>template </li>
-        <li>template </li>
-      </ul>
-    </div>  
+    <p>template template template template template template template template template template </p>
+    <p>template template template template template template template template template template </p>
+    <br>
+    <h3>Technologies</h3>
+    <br>
+    <ul style="list-style-type:none;">
+      <li>Visual Studio</li>
+      <li>Java</li>
+      <li>template</li>
+      <li>template</li>
+    </ul>
+  </div>  
 
     <button type="button" id="up" onclick="scrollToId('top')">
       <img src="https://skyfall627.github.io/MyPortfolio/ressources/down.png" id="arrow" alt="up">
