little info edit

--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
   <div id="project1" class="active">
   <a href="https://github.com/Skyfall627/MyProjects/tree/main/MSc-Coursework" target="_blank"><h2>Grade Calculator Website</h2></a>
     <br>
-    <p>This project is a coursework i had to do for my MSc in Computer Science at Oxford Brookes University.</p>
-    <p>Only own the code and the project. Demonstrating what the website would look like if the Univeristy owned it.</p>
+    <p>Developed a grading system with an ASVS Security Level 1 in a web environment.</p>
+    <p>Designed for students to add their grades for their respective modules and 
+      generate an automatic table with their letter grade, qualifications, and awards.</p>
     <br>
     <h3>Technologies</h3>
     <br>
@@ -96,8 +97,8 @@
   <div id="project2" class="hidden">
   <a href="https://drive.google.com/file/d/1NhIfCXeaUCDRB-XYFKjPFDLnXvBEeKV2/view?usp=sharing" target="_blank"><h2>The Obstrepouros Game</h2></a>
   <br>
-    <p>Can this situation where a human gets angry at an obstreperous computer/software, be comparable to human-to-human scenario?</p>
-    <p>We used Unity to create a Rythm Game in order to bring out the frustration while playing it</p>
+    <p>This project is a study of the human’s manifestation of negative feelings towards computers</p>
+    <p>The theme was Psychology of Frustration and Game Development and we chose to develop a Rhythm Game.</p>
     <br>
     <h3>Technologies</h3>
     <br>
@@ -106,14 +107,15 @@
       <li>C#</li>
       <li>Photoshop</li>
       <li>GitHub</li>
+      <li>Kanban</li>
     </ul>
   </div>
 
   <div id="project3" class="hidden">
   <a href="https://github.com/Skyfall627/Netball_application" target="_blank"><h2>Netball101</h2></a>
     <br>
-    <p>Software Development project for Netball England with a team in an Agile environment </p>
-     <p>An App for Coaches and Players with a clear goal of self education and guidance with a few extra features</p>
+    <p>Completion of project for Netball England in Agile environment. Educational Android APK for Coaches and Players with extra features.</p>
+     <p>Acting Scrum Master, Sprint backlogs and reviews Manager (Trello).</p>
      <br>
      <h3>Technologies</h3>
      <br>
@@ -122,6 +124,7 @@
        <li>Java</li>
        <li>Git/GitHub</li>
        <li>Agile</li>
+       <li>Trello</li>
      </ul>
   </div>
 
